fix CtaSection img on Safari

--- a/src/components/sections/CtaSection/styles.module.scss
+++ b/src/components/sections/CtaSection/styles.module.scss
@@ -41,10 +41,10 @@
     .img {
       position: relative;
       bottom: unset;
-      max-width: 80%;
+      max-width: 400px;
       width: 100%;
       max-height: 300px;
-      height: 100%;
+      height: auto;
       order: -1;
       display: block;
       margin: auto;
